--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,64 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  box-sizing: border-box;
+}
+body{
+  margin:0;
+  padding: 0;
+  font-family: 'Times New Roman', Times, serif;
+  background-color: brown;
+  color: antiquewhite;
+}
+.text-center{
+  text-align: center;
+}
+.container{
+  width: 60%;
+  margin:10% auto
+}
+.ListItems{
+  background:burlywood;
+  color: brown;
+  margin:0;
+  text-align: center;
+  padding: 10px 0;
+}
+.ListItems h1{
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgb(177, 100, 13);
+
+}
+table,th, td{
+  display: inline-block;
+  text-align: center;
+  padding: 10px;
+  font-size: 20px;
+  border: 0.3px solid black;
+}
+th, td{
+  width: 120px;
+  margin: 2px;
+}
+form input[type=text]{
+  width: 20%;
+  height: 35px;
+}
+form input[type=number]{
+  width: 20%;
+  height: 35px;
+}
+form input[type=Submit]{
+  width: 20%;
+  height: 35px;
+  background-color: rgb(204, 148, 75);
+  cursor:pointer
+}
+#search{
+  margin-bottom: 20px;
+  width: 100%;
+  height: 30px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.action_icone{
+  cursor:pointer
 }
